--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -27,18 +27,11 @@
     </div>
     <nav class="collapse navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
-        <li>
-          <a href="#">Category</a>
+        <%for (let i=0; i<nav.length; i++){%>
+          <li>
+          <a href="<%=nav[i].link%>"><%=nav[i].title%></a>
         </li>
-        <li>
-          <a href="#">Category</a>
-        </li>
-        <li>
-          <a href="#">Category</a>
-        </li>
-        <li>
-          <a href="#">Category</a>
-        </li>
+    <%}%>
       </ul>
       <ul class="nav navbar-right navbar-nav">
         <li class="dropdown">
